updates to svckit and added fifo context struct

--- a/posix-peer-gateway-sync/.env
+++ b/posix-peer-gateway-sync/.env
@@ -1,1 +1,11 @@
+# Peer 1 configuration
+PEER1_ID=peer1
+PEER1_READ_FIFO=/tmp/peer1_read_fifo
+PEER1_WRITE_FIFO=/tmp/peer1_write_fifo
+
+# Peer 2 configuration
+PEER2_ID=peer2
+PEER2_READ_FIFO=/tmp/peer2_read_fifo
+PEER2_WRITE_FIFO=/tmp/peer2_write_fifo
+
 BLACKLIST=fuck,fucker,fuckhead,fuckersucker
